[package]
name = "mydav"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/newam/mydav"

[dependencies]
anyhow = "1.0.72"
dav-server = { version = "0.5.7", features = ["warp-compat"] }
log = { version = "0.4.21", features = ["release_max_level_debug"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
systemd-journal-logger = "2"
tokio = { version = "1.29.1", features = ["full"] }
warp = "0.3.5"
